migrate to sveltekit2 & update version of datatable/athena-search packages

--- a/src/lib/table.scss
+++ b/src/lib/table.scss
@@ -1,3 +1,6 @@
+@import '@radar-azdelta/svelte-datatable/style';
+@import '@radar-azdelta/svelte-athena-search/style';
+
 $neutral-xx-light: #e2e2e2;
 
 :root {
