--- a/src/lib/table.scss
+++ b/src/lib/table.scss
@@ -1,5 +1,5 @@
 @import '@radar-azdelta/svelte-datatable/style';
-@import '@radar-azdelta/svelte-athena-search/style';
+// @import '@radar-azdelta/svelte-athena-search/style';
 
 $neutral-xx-light: #e2e2e2;
 
